[tool.poetry]
name = "vet"
version = "0.1.0"
description = ""
authors = ["Rafael Irgolic <hello@irgolic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^1.8.2"
msgspec = "^0.18.6"
tomli-w = "^1.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pyright = "^1.1.356"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

#[tool.poetry.plugins."poetry.plugin"]
#vet = "vet.poetry:VetPoetryPlugin"

[tool.poetry.plugins."poetry.application.plugin"]
vet = "vet.poetry_entrypoint:VetPoetryApplicationPlugin"
